# parallel_prog_mipt

./: CMakeLists.txt
debug_utils/: CMakeLists.txt
lab1/: CMakeLists.txt
lab1/access/: pi_calc.hpp
lab1/latency/: CMakeLists.txt  latency.cpp  latency.hpp
lab1/pi_calculation/: CMakeLists.txt  pi_calc.cpp  pi_calc.hpp
lab1/trans_eq/: CMakeLists.txt  eq_solver.hpp  equations.hpp  trans_eq.cpp  utils.hpp
lab1/trans_eq/include/: eq_solver.hpp  equations.hpp  utils.hpp
lab1/trans_eq/process_data/: plot.py  results.csv  results1.csv
lab2/: CMakeLists.txt
lab2/integrate/: CMakeLists.txt  integrate.cpp  integrate.hpp  main.cpp
lab2/latency/: CMakeLists.txt  latency.cpp  latency.hpp
lab2/sort/: CMakeLists.txt  sort.cpp  sort.hpp
lab2/sort/comp/: plot.py  res.txt
lab2/sort/tests/: CMakeLists.txt  main.cpp  unit_tests.hpp
mpi_wrapper/: CMakeLists.txt  mpi_wrapper.hpp
