cmake_minimum_required(VERSION 3.28)
project(lab1 LANGUAGES CXX)


#-----------------------------------------------------------------------------------------

add_subdirectory(access)
add_subdirectory(trans_eq)

#-----------------------------------------------------------------------------------------




