cmake_minimum_required(VERSION 3.28)
project(lab1 LANGUAGES CXX)

#-----------------------------------------------------------------------------------------

add_subdirectory(sort)
add_subdirectory(latency)
# add_subdirectory(integrate)

#-----------------------------------------------------------------------------------------




